2007-02-07  Sven Neumann  <sven@gimp.org>

	* app/gui/gui.c: #define DBUS_API_SUBJECT_TO_CHANGE to fix
	compilation with outdated versions of D-Bus.

2007-02-07  Sven Neumann  <sven@gimp.org>

	* app/actions/view-actions.c
	* app/actions/view-commands.[ch]
	* app/display/gimpdisplayshell.[ch]
	* app/display/gimpdisplayshell-scale.[ch]
	* app/widgets/gimphelp-ids.h
	* menus/image-menu.xml.in: applied patch from Robert Helgesson that
	adds "Revert Zoom" functionality (bug #338168).

2007-02-06  Sven Neumann  <sven@gimp.org>

	* app/core/gimpundo.[ch]: made time a property and added utility
	functions to work the undo's age.
	
	* app/tools/gimptexttool.c: use the utility functions.

2007-02-05  Sven Neumann  <sven@gimp.org>

	* app/dialogs/file-save-dialog.c (file_save_dialog_save_image):
	let the return value indicate whether the file has been saved.
	(file_save_dialog_response): only hide the dialog after the image
	has been saved.

2007-02-05  Sven Neumann  <sven@gimp.org>

	* gimpui.pc.in (Requires): require gimp-2.0 >= $GIMP_APP_VERSION.

2007-02-05  Sven Neumann  <sven@gimp.org>

	* gimp.pc.in (Requires)
	* gimpui.pc.in (Requires): substitute minimum required versions of
	glib and gtk+ instead of hardcoding them.

2007-02-03  Michael Natterer  <mitch@gimp.org>

	Remove support for the old undo pop and free cruft:

	* app/core/core-types.h: remove typedefs GimpUndoPopFunc and
	GimpUndoFreeFunc.

	* app/core/gimpundo.[ch]: remove members and properties size,
	data, pop_func and free_func.

	* app/core/gimpimage-undo.[ch] (gimp_image_undo_push): remove
	parameters size, struct_size, pop_func and free_func.

	* app/core/gimpimage-undo-push.c
	* app/tools/gimptransformtool.c
	* app/paint/gimpink.c
	* app/paint/gimppaintcore.c: change calls to above function
	accordingly.

2007-02-03  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpfloatingselundo.[ch]: implement GIMP_UNDO_FS_TO_LAYER.

	* app/core/gimpimage-undo-push.c: use it. Also changed